--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 /* header style */
-section {
+.head {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border-radius: 30px;
@@ -18,7 +18,7 @@ section {
     padding-bottom: 55px;
 }
 
-section div {
+.head div {
     width: 100%;
 }
 
@@ -31,18 +31,88 @@ div h1 {
     font-style: normal;
     font-size: 70px;
     font-weight: 700px;
-
 }
 
-a {
+.link {
     text-decoration: none;
     color: white;
     background-color: rgb(245, 69, 15);
-    padding: 10px 15px;
+    padding: 15px 25px;
     border-radius: 5px;
 }
 
 .img-flued {
     width: 100%;
     height: auto;
+}
+
+@media screen and (max-width: 500px) {
+    .responsive {
+        padding: 0 20px;
+    }
+
+}
+
+/* main section */
+main {
+    margin: 50px;
+}
+
+.main {
+    display: flex;
+}
+
+.input-box {
+    display: grid;
+    grid-row: inherit;
+    background-color: black;
+    justify-content: center;
+    position: relative;
+    width: 20%;
+    height: 220px;
+    padding: 10px;
+    margin: 15px;
+    border-radius: 10px;
+
+}
+
+.link-3 {
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.link-4 {
+    text-decoration: none;
+    color: rgb(241, 237, 237);
+    background-color: rgb(243, 13, 13);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr)
+}
+
+button {
+    padding: 5px;
+    margin: 5px;
+}
+
+.pic {
+    margin: 10px;
+    padding: 10px;
+}
+
+.pic img {
+    width: 100%;
+}
+
+p {
+    color: black;
 }
